# ethereum-models

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: error.rs  lib.rs
src/contracts/: mod.rs  token.rs
src/contracts/etherdelta/: constants.rs  decoder.rs  mod.rs  models.rs
src/objects/: block.rs  call.rs  log.rs  mod.rs  trace.rs  transaction.rs
src/types/: conversions.rs  mod.rs
test_data/: block_no_tx.json  block_tx_hashes.json  block_with_tx.json  input_data_0x.txt  input_data_no_prefix.txt  parity_trace.json
