[package]
name = "ethereum_models"
version = "0.1.0"
authors = ["Etherswap.io <admin@etherswap.io>"]

[dependencies]
ethereum-types = "0.2.0"
fixed-hash = "0.1.2"
rustc-serialize = "0.3"
serde = "1.0.23"
serde_derive = "1.0.23"
serde_json = "1.0.8"
web3 = { version = "0.2.0", git = "https://github.com/tomusdrw/rust-web3.git" }
