[package]
name = "ethereum-models"
version = "0.1.1"
authors = ["Etherswap.io <admin@etherswap.io>"]

[dependencies]
bigdecimal = "0.0.10"
error-chain = "0.11.0"
ethereum-types = { version = "0.2", features = ["use_asm"]}
fixed-hash = "0.1.2"
lazy_static = "1.0"
num = "0.1"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
twox-hash = "1.1.0"
